<resources>
    <string name="app_name">Capital Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="london">london - united kingdom</string>
    <string name="sofia">sofia - bulgaria</string>
    <string name="stockholm">stockholm - sweden</string>
    <string name="oslo">oslo - norway</string>
    <string name="brussels">brussels - belgium</string>
    <string name="copenhagen">copenhagen - denmark</string>
    <string name="athens">athens - greece</string>
    <string name="amsterdam">amsterdam - netherlands</string>
    <string name="rome">rome - italy</string>
    <string name="madrid">madrid - spain</string>
    <string name="berlin">berlin - germany</string>
    <string name="paris">paris - france</string>
    <string name="andorra_la_vella_andorra">andorra la vella - andorra</string>
    <string name="ankara_turkey">ankara - turkey</string>
    <string name="belgrade_serbia">belgrade - serbia</string>
    <string name="bern_switzerland">bern - switzerland</string>
    <string name="bratislava_slovakia">bratislava - slovakia</string>
    <string name="bucharest_romania">bucharest - romania</string>
    <string name="budapest_hungary">budapest - hungary</string>
    <string name="chisinau_moldova">chisinau - moldova</string>
    <string name="dublin_ireland">dublin - ireland</string>
    <string name="helsinki_finland">helsinki - finland</string>
    <string name="kiev_ukraine">kiev - ukraine</string>
    <string name="lisbon_portugal">lisbon - portugal</string>
    <string name="ljubljana_slovenia">ljubljana - slovenia</string>
    <string name="luxembourg_luxembourg">luxembourg - luxembourg</string>
    <string name="minsk_belarus">minsk - belarus</string>
    <string name="monaco_monaco">monaco - monaco</string>
    <string name="moscow_russia">moscow - russia</string>
    <string name="podgorica_montenegro">podgorica - montenegro</string>
    <string name="prague_czechia">prague - czechia</string>
    <string name="reykjavik_iceland">reykjavik - iceland</string>
    <string name="riga_latvia">riga - latvia</string>
    <string name="san_marino_san_marino">san marino - san marino</string>
    <string name="sarajevo_bosnia_amp_herzegovina"><![CDATA[sarajevo - bosnia & herzegovina]]></string>
    <string name="skopje_north_macedonia">skopje - north macedonia</string>
    <string name="tallinn_estonia">tallinn - estonia</string>
    <string name="tirana_albania">tirana - albania</string>
    <string name="vaduz_liechtenstein">vaduz - liechtenstein</string>
    <string name="valletta_malta">valletta - malta</string>
    <string name="vaticancity_vatican">vaticanCity - vatican</string>
    <string name="vienna_austria">vienna - austria</string>
    <string name="vilnius_lithuania">vilnius - lithuania</string>
    <string name="warsaw_poland">warsaw - poland</string>
    <string name="zagreb_croatia">zagreb - croatia</string>
    <string name="search_location">search location</string>
</resources>